unpackaged/main/default/objects/SDO_Experience_ContentArticle__c/SDO_Experience_ContentArticle__c.object-meta.xml
<CustomObject>
    <description>Used in custom LWC to show content articles as part of collections</description>
    <label>Content Article</label>
    <nameField>
        <label>Content Article Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Article</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>