unpackaged/main/default/objects/SDO_Experience_ContentArticle__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used in LWC Experience component for displaying specific articles (single component reference only)</description>
    <externalId>true</externalId>
    <label>Article External Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>