unpackaged/main/default/objects/SDO_Experience_ContentArticle__c/fields/SDO_ArticleContent__c.field-meta.xml
<CustomField>
    <fullName>SDO_ArticleContent__c</fullName>
    <description>Used in experience LWC to surface content specific to the article requested</description>
    <inlineHelpText>Full copy of the content displayed in SDO CMS component</inlineHelpText>
    <label>Article Content</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>