unpackaged/main/default/objects/SDO_Experience_ContentArticle__c/fields/SDO_CMS_ContentCollection__c.field-meta.xml
<CustomField>
    <fullName>SDO_CMS_ContentCollection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in LWC to connect articles to collections - not an MD or required as articles need the ability to stand alone</description>
    <label>Content Collection</label>
    <referenceTo>SDO_Experience_ContentCollection__c</referenceTo>
    <relationshipLabel>Content Article</relationshipLabel>
    <relationshipName>Content_Article</relationshipName>
    <type>Lookup</type>
</CustomField>