unpackaged/main/default/objects/SDO_Experience_ContentArticle__c/fields/SDO_CMS_PreviewContent__c.field-meta.xml
<CustomField>
    <fullName>SDO_CMS_PreviewContent__c</fullName>
    <description>Text area leveraged in the SDO CMS component to provide a preview of content</description>
    <inlineHelpText>Preview of the content displayed in SDO CMS component</inlineHelpText>
    <label>Preview Content</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>