unpackaged/main/default/objects/SDO_Experience_ContentArticle__c/fields/SDO_ImageURL__c.field-meta.xml
<CustomField>
    <fullName>SDO_ImageURL__c</fullName>
    <description>Used in the custom experience component for image references</description>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>